--- a/zee5appspringboot/src/main/resources/application.properties
+++ b/zee5appspringboot/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 #it will display all auto gen. sql statements
-spring.jpa.hibernate.ddl-auto=create 
+spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.hibernate.naming.physical-strategy=com.zee.zee5_app.utils.CustomNamingStrategy
 #create on every execution it will create all the tables for u
 # on every execution it will drop the table if exists 
@@ -22,4 +22,4 @@ spring.jpa.hibernate.naming.physical-strategy=com.zee.zee5_app.utils.CustomNamin
 # validate : data jpa neither it will create nor modify the table.
 # it will use only existing structures.
 # none : assignment 
-
+#server.port=9005
