--- a/zee5appspringboot/src/main/resources/application.properties
+++ b/zee5appspringboot/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.jpa.hibernate.naming.physical-strategy=com.zee.zee5_app.utils.CustomNamin
 # validate : data jpa neither it will create nor modify the table.
 # it will use only existing structures.
 # none : assignment 
-#server.port=9005
+server.port=9001
