Spring Security Day 2

--- a/zee5appspringboot/src/main/resources/application.yml
+++ b/zee5appspringboot/src/main/resources/application.yml
@@ -19,5 +19,8 @@ server:
   servlet:
     context-path: /api
         
-    
+zee5_app:
+  app:
+    jwtSecret:secretKey
+    jwtExpirationMs:86400000    
     
